Added a image and some elements

--- a/test.html
+++ b/test.html
@@ -1,5 +1,16 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-<h1>Hey. I'm a big heading</h1>
-<p>Hey. I'm a paragraph element. COol huh?</p>
-<a href="https://google.com" target="_blank" title="LEt's go to google"> Click me! I'm a link </a>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Test page</title>
+    </head>
+    <body>
+        <head>title</head>
+        <h1>Hey. I'm a big heading</h1>
+        <p>Hey. I'm a <b>paragraph</b> element. COol huh?</p>
+        <a href="https://google.com" target="_blank" title="LEt's go to google"> Click me! I'm a link </a>
+        <p> My name is: <br> Kid</p>
+        <img src="img/python.PNG">
+    </body>
+</html>
